Fix jump to main/supporting characters not working on Android PWA

--- a/css/tracker.css
+++ b/css/tracker.css
@@ -170,6 +170,7 @@ td.symbol {
 
 .internal_link {
   color: var(--internal-link-color);
+  cursor: pointer;
 }
 
 .action_link {
